# ttyper

./: .gitignore  Cargo.toml
src/: calculate.rs  cli.rs  config.rs  error.rs  main.rs  messages.rs  model.rs  resources.rs  types.rs  utils.rs
src/components/: mod.rs  result.rs  test.rs
src/components/result/: accuracy.rs  component.rs  mock_component.rs  mod.rs  timing.rs
src/components/test/: component.rs  handler.rs  mock_component.rs  mod.rs  spans.rs  status.rs  word.rs
src/types/: accuracy_data.rs  cli.rs  fraction.rs  mod.rs  results.rs  test_event.rs  test_word.rs  timing_data.rs
src/types/test/: handler.rs  mod.rs
