[package]
name = "ttyper"
description = "Terminal-based typing test."
version = "1.6.0"
readme = "README.md"
repository = "https://github.com/max-niederman/ttyper.git"
homepage = "https://github.com/max-niederman/ttyper"
license = "MIT"
authors = ["Max Niederman <max@maxniederman.com>"]
edition = "2021"
[dependencies]
clap = { version = "^4.5", features = ["derive"] }
clap_complete = "^4.5"
dirs = "^5.0"
crossterm = "^0.29"
rust-embed = "^8.2"
toml = "^0.8"
tuirealm = { version = "3.3.0", features = ["crossterm", "derive"] }
eyre = "0.6.12"
thiserror = "2.0.18"
tui-realm-stdlib = { version = "3.1.0", features = ["crossterm"] }

[dependencies.ratatui]
version = "^0.29"

[dependencies.rand]
version = "^0.8"
features = ["alloc"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dev-dependencies]
tempfile = "3.27.0"

[workspace.lints.rust]
mismatched_lifetime_syntaxes = "deny"
unused_imports = "deny"
unused_must_use = "deny"
dead_code = "deny"
unstable_name_collisions = "deny"
unused_assignments = "deny"
deprecated = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# deny
filetype_is_file = "deny"
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
panic = "deny"
match_like_matches_macro = "deny"
needless_update = "deny"
expect_used = "deny"

# allow
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
empty_docs = "allow"
unnecessary_debug_formatting = "allow"

# allow
significant_drop_tightening = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"

